packages/svelte/tests/validator/samples/binding-import-component/input.svelte
<script>
	import Input from './Input.svelte';
	import { dummy } from './dummy.js';
</script>

<Input bind:value={dummy} />
