packages/svelte/tests/compiler-errors/samples/component-slot-duplicate-error-4/main.svelte
<script>
	import Nested from './irrelevant';
</script>

<Nested>
	<svelte:fragment slot="default">value</svelte:fragment>
	<p>value</p>
</Nested>
